Resolve sticky issue with admin bar on mobile

--- a/sass/site/_header.scss
+++ b/sass/site/_header.scss
@@ -26,11 +26,6 @@
 			@media (max-width: 782px) {
 				top: 46px;
 			}
-
-			@media (max-width: 600px) {
-				position: fixed;
-				top: 0;
-			}
 		}		
 	}
 	
